# gcs-cpp

./: CMakeLists.txt  README.md
include/: gcs.h  gcs_helpers.h  helpers.h
models/: bimanual_iiwa.yaml  iiwa14_spheres_collision_welded_gripper.yaml  iiwa14_welded_gripper.yaml  schunk_wsg_50_welded_fingers.sdf  schunk_wsg_50_welded_fingers_sphere_collision.sdf
models/room_gen/: ceiling.sdf  floor.mtl  floor_indoor.sdf  floor_outdoor.sdf  half_wall_horizontal.mtl  half_wall_horizontal.sdf  half_wall_vertical.sdf  just_wall.sdf  start.sdf  target.sdf  tree.sdf  wall.mtl  wall_with_center_door.mtl  wall_with_center_door.sdf  wall_with_center_door_internal.mtl  wall_with_left_window.mtl  wall_with_left_window.sdf  wall_with_right_window.mtl  wall_with_right_window.sdf  wall_with_windows.mtl  wall_with_windows.sdf
models/shelves/: shelves.mtl  shelves.sdf
models/table/: table.mtl  table.sdf  table_wide.mtl  table_wide.sdf
src/: CMakeLists.txt  bimanual_example.cpp  helpers.cpp
src/gcs/: CMakeLists.txt  gcs.cpp  gcs_helpers.cpp
src/test/: CMakeLists.txt  gcs_test.cpp
